--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = [".", "entity", "migration"]
+members = [".", "entity", "migration","my-yew-front"]
 
 [dependencies]
 futures = { version = "0.3" }
@@ -15,7 +15,7 @@ listenfd = "0.5.0"
 dotenv = "0.15.0"
 serde = "1.0.137"
 
-actix-web = "3"
+actix-web = "4"
 actix-http = "2"
 actix-flash = "0.2.0"
 actix-files = "0.5"
@@ -23,5 +23,5 @@ actix-files = "0.5"
 
 entity = { path = "entity" }
 migration = { path = "migration" }
-sea-orm = { version = "0.8.0", features = ["debug-print", "runtime-async-std-native-tls", "sqlx-postgres"] }
+sea-orm = { version = "0.8.0", features = ["debug-print", "runtime-actix-native-tls", "sqlx-postgres"] }
 
